--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   import {
     getAuth,
     createUserWithEmailAndPassword,
-    signInWithEmailAndPassword
+    signInWithEmailAndPassword,
+    signOut,
+    onAuthStateChanged
   } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-auth.js";
   import {
     getDatabase,
     ref,
     set,
     get,
-    child,
     update
   } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-database.js";
 
@@ -29,33 +30,41 @@
     databaseURL: "https://spaceclicker-78ef5-default-rtdb.firebaseio.com"
   };
 
-  // === Инициализация Firebase ===
+  // === Инициализация ===
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
   const db = getDatabase(app);
+
+  // === Глобальные переменные ===
+  let currentUserData = null;
+  let uid = null;
 
   // === Регистрация ===
   async function doRegister() {
     const username = document.getElementById("regUsername").value.trim();
     const password = document.getElementById("regPassword").value.trim();
     const t = translations[currentLanguage];
-
     if (!username || !password) {
       showMsg("registerMsg", t.enterUsernamePassword, false);
       return;
     }
-
     const email = `${username}@clicker.com`;
+
     try {
       const userCred = await createUserWithEmailAndPassword(auth, email, password);
-      const uid = userCred.user.uid;
-      await set(ref(db, "users/" + uid), {
+      uid = userCred.user.uid;
+      currentUserData = {
         username,
         count: 0,
         money: 0,
         level: 0,
+        cookies: { small: 0, medium: 0, large: 0 },
+        equipped: { small: 0, medium: 0, large: 0 },
+        achievements: {},
+        quests: { active: null, completed: [] },
         createdAt: new Date().toISOString()
-      });
+      };
+      await set(ref(db, "users/" + uid), currentUserData);
       showMsg("registerMsg", t.registrationSuccess, true);
       showLogin();
     } catch (error) {
@@ -69,24 +78,18 @@
     const username = document.getElementById("loginUsername").value.trim();
     const password = document.getElementById("loginPassword").value.trim();
     const t = translations[currentLanguage];
-
     if (!username || !password) {
       showMsg("loginMsg", t.enterUsernamePassword, false);
       return;
     }
-
     const email = `${username}@clicker.com`;
+
     try {
       const userCred = await signInWithEmailAndPassword(auth, email, password);
-      const uid = userCred.user.uid;
-
-      const snapshot = await get(child(ref(db), "users/" + uid));
+      uid = userCred.user.uid;
+      const snapshot = await get(ref(db, "users/" + uid));
       if (snapshot.exists()) {
-        const data = snapshot.val();
-        currentUsername = data.username;
-        count = data.count || 0;
-        money = data.money || 0;
-        internal_level = data.level || 0;
+        currentUserData = snapshot.val();
         showMsg("loginMsg", t.loginSuccess, true);
         setTimeout(showLoading, 800);
       } else {
@@ -98,30 +101,53 @@
     }
   }
 
-  // === Сохранение прогресса ===
-  async function increment() {
-    count++;
-    updateCounter();
-
-    const user = auth.currentUser;
-    if (user) {
-      try {
-        await update(ref(db, "users/" + user.uid), {
-          count,
-          money,
-          level: internal_level
-        });
-      } catch (error) {
-        console.error("Ошибка сохранения:", error);
-      }
+  // === Сохранение в Firebase ===
+  async function saveProgress(updates = {}) {
+    if (!uid) return;
+    try {
+      await update(ref(db, "users/" + uid), updates);
+    } catch (error) {
+      console.error("Ошибка при сохранении:", error);
     }
   }
 
-  // === Делаем функции доступными ===
+  // === Инкремент кликов ===
+  async function increment() {
+    if (!currentUserData) return;
+    currentUserData.count = (currentUserData.count || 0) + 1;
+    updateCounter();
+    await saveProgress({ count: currentUserData.count });
+  }
+
+  // === Выход ===
+  async function doLogout() {
+    await signOut(auth);
+    uid = null;
+    currentUserData = null;
+    document.getElementById("gameScreen").style.display = "none";
+    document.getElementById("authContainer").style.display = "block";
+  }
+
+  // === Автоматическая загрузка при входе ===
+  onAuthStateChanged(auth, async (user) => {
+    if (user) {
+      uid = user.uid;
+      const snapshot = await get(ref(db, "users/" + uid));
+      if (snapshot.exists()) {
+        currentUserData = snapshot.val();
+        showGame();
+      }
+    }
+  });
+
+  // === Глобально доступные функции ===
   window.doRegister = doRegister;
   window.doLogin = doLogin;
+  window.doLogout = doLogout;
   window.increment = increment;
+  window.saveProgress = saveProgress;
 </script>
+  
 
 
 
@@ -1568,26 +1594,24 @@ function checkKey() {
   }
 
   function showGame() {
-    var t = translations[currentLanguage];
-    document.getElementById('loadingScreen').style.display = 'none';
-    document.getElementById('gameScreen').style.display = 'block';
-    setTimeout(() => { document.getElementById('gameScreen').classList.add('visible'); }, 10);
-    var user = getCurrentUser();
-    if (user) {
-      count = parseFloat(user.count) || 0;
-      money = parseFloat(user.money) || 0;
-      internal_level = user.internal_level || 0;
-      updateCounter();
-      updateMoney();
-      updateLevel();
-      updateCurrentQuest();
-      if (user.active_quest !== null) {
-        startQuestTimer();
-        startQuestUpdateInterval();
-      }
-    } else {
-      alert(t.userNotFoundAlert);
-    }
+  const t = translations[currentLanguage];
+  // Скрываем экраны загрузки и входа
+  document.getElementById("loadingScreen").style.display = "none";
+  document.getElementById("authContainer").style.display = "none";
+
+  // Показываем игровой экран
+  const gameScreen = document.getElementById("gameScreen");
+  gameScreen.style.display = "block";
+  setTimeout(() => gameScreen.classList.add("visible"), 10);
+
+  // Обновляем всю статистику игрока
+  if (currentUserData) {
+    document.getElementById("counter").innerText = t.counter + (currentUserData.count || 0);
+    document.getElementById("money").innerText = t.money + (currentUserData.money || 0);
+    document.getElementById("level").innerText = t.level + (currentUserData.level || 0);
+  }
+}
+
 
     // Remove admin button if exists
     var existingAdminButton = document.getElementById('adminButton');
@@ -1831,101 +1855,175 @@ function checkKey() {
     dragElement(document.getElementById('inventoryMenu'));
   }
 
+<script>
+  // === 🔥 Firebase-интеграция: квесты, достижения, инвентарь ===
+
+  // === Инвентарь ===
   function renderInventory() {
-    var t = translations[currentLanguage];
-    var user = getCurrentUser();
-    var content = '<h3>' + t.inventoryTitle + '</h3>';
-    var hasItems = false;
-    if (user.has_small_cookie) {
-      hasItems = true;
-      content += '<p>' + t.smallCookie;
-      if (user.equipped_small_cookie) {
-        content += t.equipped + ' <button onclick="unequipSmallCookie()">' + t.unequip + '</button>';
-      } else {
-        content += ' <button onclick="equipSmallCookie()">' + t.equip + '</button>';
-      }
-      content += '</p>';
+    const t = translations[currentLanguage];
+    const inv = currentUserData?.cookies || {};
+    let content = `
+      <h3>${t.inventoryTitle}</h3>
+      <p>${t.smallCookie}: ${inv.small || 0}</p>
+      <p>${t.mediumCookie}: ${inv.medium || 0}</p>
+      <p>${t.largeCookie}: ${inv.large || 0}</p>
+      <button onclick="closeInventory()">${t.close}</button>
+    `;
+    const menu = document.getElementById("inventoryMenu");
+    if (menu) {
+      menu.innerHTML = content;
+      menu.style.display = "block";
+      setTimeout(() => menu.classList.add("open"), 10);
     }
-    if (user.has_medium_cookie) {
-      hasItems = true;
-      content += '<p>' + t.mediumCookie;
-      if (user.equipped_medium_cookie) {
-        content += t.equipped + ' <button onclick="unequipMediumCookie()">' + t.unequip + '</button>';
-      } else {
-        content += ' <button onclick="equipMediumCookie()">' + t.equip + '</button>';
-      }
-      content += '</p>';
-    }
-    if (user.has_large_cookie) {
-      hasItems = true;
-      content += '<p>' + t.largeCookie;
-      if (user.equipped_large_cookie) {
-        content += t.equipped + ' <button onclick="unequipLargeCookie()">' + t.unequip + '</button>';
-      } else {
-        content += ' <button onclick="equipLargeCookie()">' + t.equip + '</button>';
-      }
-      content += '</p>';
-    }
-    if (!hasItems) {
-      content += '<p>' + t.inventoryEmpty + '</p>';
-    }
-    content += '<button onclick="closeInventory()">' + t.close + '</button>';
-    document.getElementById('inventoryMenu').innerHTML = content;
   }
 
   function closeInventory() {
-    document.getElementById('inventoryMenu').classList.remove('open');
-    setTimeout(() => { document.getElementById('inventoryMenu').style.display = 'none'; }, 500);
+    const menu = document.getElementById("inventoryMenu");
+    if (!menu) return;
+    menu.classList.remove("open");
+    setTimeout(() => (menu.style.display = "none"), 500);
   }
 
-  function equipSmallCookie() {
-    var user = getCurrentUser();
-    user.equipped_small_cookie = 1;
-    writeUsers();
-    renderInventory();
+  window.showInventory = renderInventory;
+
+  // === Квесты ===
+  const quests = [
+    { id: 1, clicksRequired: 500, reward: 300 },
+    { id: 2, clicksRequired: 1000, reward: 700 },
+    { id: 3, clicksRequired: 3000, reward: 2500 },
+  ];
+
+  function renderQuests() {
+    const t = translations[currentLanguage];
+    let content = `<h3>${t.questsTitle}</h3>`;
+    quests.forEach((quest) => {
+      const isCompleted = currentUserData?.quests?.completed?.includes(quest.id);
+      const isActive = currentUserData?.quests?.active === quest.id;
+      const status = isCompleted
+        ? t.questCompleted
+        : isActive
+        ? t.questInProgress
+        : t.questAvailable;
+
+      content += `<p>${status}: ${quest.clicksRequired} ${t.clicksRequired}, ${t.reward}: ${quest.reward}</p>`;
+      if (!isCompleted) {
+        if (isActive) {
+          content += `<button onclick="cancelQuest(${quest.id})">${t.cancelQuest}</button>`;
+        } else {
+          content += `<button onclick="takeQuest(${quest.id})">${t.takeQuest}</button>`;
+        }
+      }
+      content += "<br>";
+    });
+    content += `<button onclick="closeQuests()">${t.close}</button>`;
+    const menu = document.getElementById("questsMenu");
+    if (menu) {
+      menu.innerHTML = content;
+      menu.style.display = "block";
+      setTimeout(() => menu.classList.add("open"), 10);
+    }
   }
 
-  function unequipSmallCookie() {
-    var user = getCurrentUser();
-    user.equipped_small_cookie = 0;
-    writeUsers();
-    renderInventory();
+  async function takeQuest(id) {
+    if (!currentUserData) return;
+    if (currentUserData.quests.active !== null) {
+      alert(translations[currentLanguage].activeQuest);
+      return;
+    }
+    currentUserData.quests.active = id;
+    await saveProgress({ quests: currentUserData.quests });
+    alert(translations[currentLanguage].questTaken);
+    renderQuests();
   }
 
-  function equipMediumCookie() {
-    var user = getCurrentUser();
-    user.equipped_medium_cookie = 1;
-    writeUsers();
-    renderInventory();
+  async function cancelQuest(id) {
+    if (!currentUserData) return;
+    if (currentUserData.quests.active === id) {
+      currentUserData.quests.active = null;
+      await saveProgress({ quests: currentUserData.quests });
+      alert(translations[currentLanguage].questCancelled);
+      renderQuests();
+    }
   }
 
-  function unequipMediumCookie() {
-    var user = getCurrentUser();
-    user.equipped_medium_cookie = 0;
-    writeUsers();
-    renderInventory();
+  async function completeQuestFirebase(id) {
+    const quest = quests.find((q) => q.id === id);
+    if (!quest) return;
+    currentUserData.money += quest.reward;
+    currentUserData.quests.completed.push(id);
+    currentUserData.quests.active = null;
+    await saveProgress({ money: currentUserData.money, quests: currentUserData.quests });
+    alert(translations[currentLanguage].questCompletedSuccess.replace("{reward}", quest.reward));
+    renderQuests();
   }
 
-  function equipLargeCookie() {
-    var user = getCurrentUser();
-    user.equipped_large_cookie = 1;
-    writeUsers();
-    renderInventory();
+  function closeQuests() {
+    const menu = document.getElementById("questsMenu");
+    if (!menu) return;
+    menu.classList.remove("open");
+    setTimeout(() => (menu.style.display = "none"), 500);
   }
 
-  function unequipLargeCookie() {
-    var user = getCurrentUser();
-    user.equipped_large_cookie = 0;
-    writeUsers();
-    renderInventory();
+  window.showQuests = renderQuests;
+
+  // === Достижения ===
+  const achievements = [
+    { id: "achieve100", condition: (u) => u.count >= 100, name: "100 Clicks!" },
+    { id: "achieve1000", condition: (u) => u.count >= 1000, name: "1,000 Clicks!" },
+    { id: "achieve5000", condition: (u) => u.count >= 5000, name: "5,000 Clicks!" },
+  ];
+
+  function renderAchievements() {
+    const t = translations[currentLanguage];
+    let content = `<h3>${t.achievementsTitle}</h3>`;
+    achievements.forEach((a) => {
+      const unlocked = currentUserData?.achievements?.[a.id];
+      content += `<p>${a.name}: ${unlocked ? t.unlocked : t.locked}</p>`;
+    });
+    content += `<button onclick="closeAchievements()">${t.close}</button>`;
+    const menu = document.getElementById("achievementsMenu");
+    if (menu) {
+      menu.innerHTML = content;
+      menu.style.display = "block";
+      setTimeout(() => menu.classList.add("open"), 10);
+    }
   }
 
-  function showAdminPanel() {
-    renderAdminPanel();
-    document.getElementById('adminMenu').style.display = 'block';
-    setTimeout(() => { document.getElementById('adminMenu').classList.add('open'); }, 10);
-    dragElement(document.getElementById('adminMenu'));
+  function closeAchievements() {
+    const menu = document.getElementById("achievementsMenu");
+    if (!menu) return;
+    menu.classList.remove("open");
+    setTimeout(() => (menu.style.display = "none"), 500);
   }
+
+  async function checkAchievements() {
+    for (const a of achievements) {
+      if (!currentUserData.achievements[a.id] && a.condition(currentUserData)) {
+        currentUserData.achievements[a.id] = true;
+        await saveProgress({ achievements: currentUserData.achievements });
+        alert(translations[currentLanguage].achievementUnlocked.replace("{name}", a.name));
+      }
+    }
+  }
+
+  window.showAchievements = renderAchievements;
+
+  // === Обновление данных при входе ===
+  function updateGameUI() {
+    const t = translations[currentLanguage];
+    document.getElementById("counter").innerText = t.counter + (currentUserData?.count || 0);
+    document.getElementById("money").innerText = t.money + (currentUserData?.money || 0);
+    document.getElementById("level").innerText = t.level + (currentUserData?.level || 0);
+  }
+
+  // При клике — обновляем прогресс и проверяем достижения
+  const oldIncrement = window.increment;
+  window.increment = async function() {
+    await oldIncrement();
+    updateGameUI();
+    checkAchievements();
+  };
+
 
   function renderAdminPanel() {
     var t = translations[currentLanguage];
