--- a/index.html
+++ b/index.html
@@ -615,6 +615,10 @@
   </div>
 
 <script>
+  var currentUsername = '';
+  var count = 0;
+  var money = 0;
+  var internal_level = 0;
   var isDemo = false;
   var demoUser = null;
   var demoTimerInterval = null;
