--- a/index.html
+++ b/index.html
@@ -2713,6 +2713,37 @@ var encoded_keys = {
   window.getTargetUser = getTargetUser;
   window.getUserByUsername = getUserByUsername;
   window.getUidByUsername = getUidByUsername;
+  window.showGame = showGame;
+  window.trim = trim;
+  window.dragElement = dragElement;
+  window.isPaused = isPaused; // Note: variables can't be made global like functions, but since it's used internally, it's fine.
+  window.questClicks = questClicks; // Same for other variables if needed.
+  window.questStartTime = questStartTime;
+  window.questTimerInterval = questTimerInterval;
+  window.questUpdateInterval = questUpdateInterval;
+  window.quests = quests;
+  window.demoJustExpired = demoJustExpired;
+  window.demoTimeLeft = demoTimeLeft;
+  window.demoTimerInterval = demoTimerInterval;
+  window.demoUser = demoUser;
+  window.isInfiniteDemo = isInfiniteDemo;
+  window.wasQuestActive = wasQuestActive;
+  window.wasDemoTimerActive = wasDemoTimerActive;
+  window.pauseStartTime = pauseStartTime;
+  window.keys = keys;
+  window.currentLanguage = currentLanguage;
+  window.translations = translations;
+  window.isDemo = isDemo;
+  window.count = count;
+  window.money = money;
+  window.internal_level = internal_level;
+  window.currentUsername = currentUsername;
+  window.userData = userData;
+  window.currentUid = currentUid;
+  window.db = db;
+  window.auth = auth;
+  window.app = app;
+  window.firebaseConfig = firebaseConfig;
 </script>
 </body>
 </html>
