--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     import { getDatabase, ref, set, get, update, child } from 'https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js';
 
     // Конфигурация Firebase (замени на свои данные)
-    const firebaseConfig = {
-        apiKey: "your-api-key",
-        authDomain: "your-auth-domain",
-        databaseURL: "your-database-url",
-        projectId: "your-project-id",
-        storageBucket: "your-storage-bucket",
-        messagingSenderId: "your-messaging-sender-id",
-        appId: "your-app-id"
-    };
+    const firebaseConfig = { 
+  apiKey : «AIzaSyAlYasR91o2zMvD3OYYNFHdoyAAvfkiK80» , 
+  authDomain : "spaceclicker-78ef5.firebaseapp.com" , 
+  databaseURL : "https://spaceclicker-78ef5-default-rtdb.firebaseio.com" , 
+  projectId : "spaceclicker-78ef5" , 
+  storageBucket : "spaceclicker-78ef5.firebasestorage.app" , 
+  messagingSenderId : "1007817982727" , 
+  appId : "1:1007817982727:web:c653b6f656b017cbb73ba2" 
+};
 
     // Инициализация Firebase
     const app = initializeApp(firebaseConfig);
