--- a/index.html
+++ b/index.html
@@ -186,6 +186,29 @@
   window.doRegister = doRegister;
   window.doLogin = doLogin;
   window.increment = increment;
+  // ... (предыдущий код модуля)
+
+// === Делаем функции доступными ===
+window.doRegister = doRegister;
+window.doLogin = doLogin;
+window.increment = increment;
+
+// === Добавляем недостающие функции и переменные ===
+window.getCurrentUser = getCurrentUser;
+window.getUserByUsername = getUserByUsername;
+window.userData = userData;
+window.currentUid = currentUid;
+window.showGame = showGame;
+window.checkQuestCompletion = checkQuestCompletion;
+window.checkAchievements = checkAchievements;
+window.renderInventory = renderInventory;
+window.showInventory = showInventory;
+window.renderQuests = renderQuests;
+window.showQuests = showQuests;
+window.renderShop = renderShop;
+window.showShop = showShop;
+window.renderAchievements = renderAchievements;
+window.showAchievements = showAchievements;
 </script>
 
 
