--- a/index.html
+++ b/index.html
@@ -209,6 +209,8 @@ window.renderShop = renderShop;
 window.showShop = showShop;
 window.renderAchievements = renderAchievements;
 window.showAchievements = showAchievements;
+window.showQuests = showQuests;
+window.logout = logout;
 </script>
 
 
